@@ -76,6 +76,7 @@
 #include <intshcut.h>
 #include <ocidl.h>
 #include <ole2ver.h>
+#include <oleacc.h>
 #include <olectl.h>
 #include <oledlg.h>
 #include <docobj.h>
